--- a/style.css
+++ b/style.css
@@ -3,10 +3,40 @@ html {
 }
 
 main {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    display: grid !important;
+    justify-content: center;
+}
+
+header {
+    display: flex;
+    justify-content: left;
+    margin: 15px 0 20px 0;
+    border-bottom: solid 1px gray;
+    padding: 5px;
+}
+
+.header-title {
+    font-size: 25px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.header-miscinfo {
+    align-self: flex-end;
+    text-align: right;
+    font-style: italic;
+    font-size: 12px;
+}
+
+.align_mright {
+    margin-left: auto;
+}
+
+.indicators-container {
+    width: 60vw;
+    display: flex;
+    justify-content: center;
+    margin-top: 75px;
 }
 
 .indicators {
@@ -18,6 +48,53 @@ main {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 5px;
     padding: 5px;
+    width: min-content;
+    margin-bottom: 150px;
+}
+
+.sim {
+    margin-top: 25px;
+    width: 100%;
+    height: 3px;
+    background: gray;
+    padding-right: 3px;
+}
+
+.sim::before {
+    content: '';
+    position: absolute;
+    width: 3px;
+    height: 22px;
+    background: gray;
+    transform: translate(-3px, -10px);
+}
+
+.sim::after {
+    content: '';
+    position: absolute;
+    width: 3px;
+    height: 22px;
+    right: calc(100% - 80vw);
+    background: gray;
+    transform: translateY(-24px);
+}
+
+.sim-distval {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sim-distval:last-child {
+    float: right;
+}
+
+.sim>.train {
+    background: rgb(32, 99, 76);
+    width: 25px;
+    height: 15px;
+    transform: translateY(-15px);
+    margin-left: 0;
 }
 
 .indicators>.indicator {
@@ -33,8 +110,32 @@ main {
     color: black;
 }
 
+.sim-controls {
+    margin-top: 75px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    align-content: center;
+    gap: 50px;
+}
+
+.sim-stats {
+    margin-left: auto;
+    display: grid;
+    gap: 5px;
+    text-align: right;
+}
+
+.statval {
+    font-weight: bold;
+}
+
 .active {
     filter: brightness(100%) !important;
+}
+
+.bold {
+    font-weight: bold;
 }
 
 .active-blink {
@@ -64,10 +165,12 @@ main {
 }
 
 .control-panel {
-    display: absolute;
+    position: absolute;
+    left: 0;
     display: grid;
     justify-content: center;
     text-align: center;
+    transform: scale(70%);
 }
 
 .checkboxes {
